@@ -1,10 +1,13 @@
 kbd-chooser (1.01) UNRELEASED; urgency=low
 
   * Joey Hess
-    - Change code that fset debian-installer/keymap seen to a strange 
+    - Change code that fset debian-installer/keymap seen to a strange
       value of "yes" to fset it to a valid value of "true". Not checked.
+  * Joshua Kwan
+    - All keyboards on SPARC/2.6 are enumerated as PC keyboards, so don't
+      load the sun keymap for them.
 
- -- Joey Hess <joeyh@debian.org>  Wed,  1 Sep 2004 16:45:08 -0400
+ -- Joshua Kwan <joshk@triplehelix.org>  Sun, 12 Sep 2004 10:40:46 -0700
 
 kbd-chooser (1.00) unstable; urgency=low
 
